[gd_scene load_steps=8 format=3 uid="uid://ro853h8fu13i"]

[ext_resource type="Script" uid="uid://cr7cm16cbx62a" path="res://Scripts/CreateAccount.gd" id="1_kbres"]
[ext_resource type="Shader" uid="uid://hiwpjhq7r4xr" path="res://Resources/Shaders/pause_menu.gdshader" id="2_o4bwf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o4bwf"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5hqn3"]
shader = ExtResource("2_o4bwf")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_2d5ka"]
length = 0.001

[sub_resource type="Animation" id="Animation_rq2rf"]
resource_name = "blur"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jn7a3"]
_data = {
&"RESET": SubResource("Animation_2d5ka"),
&"blur": SubResource("Animation_rq2rf")
}

[node name="CreateUserWindow" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -243.5
offset_top = -166.5
offset_right = 243.5
offset_bottom = 193.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o4bwf")
script = ExtResource("1_kbres")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_5hqn3")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
visibility_layer = 512
custom_minimum_size = Vector2(120, 90)
layout_mode = 0
offset_left = 820.0
offset_top = 255.0
offset_right = 1100.0
offset_bottom = 815.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 69.0
offset_right = -8.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="UserNameLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "Username*"
scroll_active = false

[node name="UserNameText" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
caret_blink = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="EmailLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "Email*"
scroll_active = false

[node name="EmailText" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
caret_blink = true

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PhoneLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "Phone"
scroll_active = false

[node name="PhoneText" type="LineEdit" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
caret_blink = true

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PasswordLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "Password*"

[node name="PasswordText" type="LineEdit" parent="VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "password123"
caret_blink = true

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RepeatPasswordLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "Repeat password*"
scroll_active = false

[node name="RepeatPasswordText" type="LineEdit" parent="VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "password123"
caret_blink = true

[node name="Create" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Create"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 17.0
offset_right = 486.0
offset_bottom = 58.0
bbcode_enabled = true
text = "[center][b]Create new acccount"

[node name="Close" type="Button" parent="."]
layout_mode = 0
offset_left = 439.0
offset_top = 2.0
offset_right = 487.0
offset_bottom = 44.0
text = "X"

[node name="ErrLabel" type="Label" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jn7a3")
}

[connection signal="button_down" from="VBoxContainer/Create" to="." method="_on_create_button_down"]
[connection signal="button_down" from="Close" to="." method="_on_close_button_down"]
